2018-06-28  Fritz Reese  <fritzoreese@gmail.com>

gcc/fortran/ChangeLog:

	PR fortran/82865
	* decl.c (gfc_match_type): Refactor and check for PDT declarations.

    gcc/testsuite/ChangeLog:

	PR fortran/82865
	* gfortran.dg/dec_type_print_2.f03: New testcase.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@262221 138bc75d-0d04-0410-961f-82ee72b054a4